--- a/10000hours.html
+++ b/10000hours.html
@@ -32,7 +32,10 @@
       </p>
       <p>
         그래서 앞으로 매일 하루에
-        <input type="number" placeholder="예)5시간" /> 시간씩 훈련할 것이다.
+        <span class="mobile_br">
+          <input type="number" placeholder="예)5시간" /> 시간씩 훈련할
+          것이다.</span
+        >
       </p>
     </section>
 
