--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 
     <div class="dd">
       <button type="button" class="user_click_btn">
-        나는 며칠 동안 훈련을 해야 1만 시간이 될까?
+        나는 며칠 동안 훈련을 해야
+        <span class="mobile_br">1만 시간이 될까?</span>
       </button>
-      <img src="/img/click.png" class="click_icon" />
+      <img src="/img/click.svg" class="click_icon" />
     </div>
 
     <div class="calculate_result">
