--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
       <h2 class="blind">1만 시간의 법칙</h2>
     </header>
 
-    <img
-      src="./img/“연습은 어제의 당신보다 당신을 더 낫게 만든다.”.png"
-      class="main_phrase"
-    />
+    <img src="./img/practice_phrase.png" class="main_phrase" />
     <h2 class="blind">연습은 어제의 당신보다 당신을 더 낫게 만든다.</h2>
 
     <p class="explain_project">
